# counterfactual-xrl

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTIONS.md  ENGINEERING_LOG.md  EXECUTION_PLAN.md  HANDOFF.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Proposal/: ASSIGNMENT.md  feedback.md  proposal.md  proposal.tex
configs/: dqn_baseline.yaml  dqn_improved.yaml  dqn_shaped.yaml  dqn_symbolic.yaml  explainer.yaml  mcts_baseline.yaml  ppo_baseline.yaml  ppo_tuned.yaml
docs/: mcts_design.md  metrics_spec.md  observation_vs_state.md  problem_formulation.md
docs/conversation-history/: README.md
reference/: README.md
report/: README.md  main.tex
report/figures/: eval_summary.csv
scripts/: build_decision_records.py  chat.py  eval.py  eval_ppo.py  evaluate_explanations.py  explain.py  report_figures.py  reproduce_all.sh  run_dqn_ablation.sh  run_mcts.py  smoke_env.py  train_dqn.py  train_ppo.py
src/xrl/agents/: base.py  dqn.py  mcts.py  ppo.py
src/xrl/analysis/: counterfactual.py  records.py  tree_stats.py
src/xrl/envs/: simulator.py  wrappers.py
src/xrl/eval/: metrics.py  runner.py
src/xrl/explainer/: client.py  pipeline.py  prompts.py
src/xrl/utils/: config.py  seeding.py
tests/: test_env_facts.py  test_explainer.py  test_mcts.py  test_records_and_counterfactual.py  test_smoke.py
