[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xrl"
version = "0.1.0"
description = "Counterfactual XRL: DQN vs MCTS explainability"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.34.0",
  "gymnasium==0.29.1",
  "jsonschema",
  "matplotlib",
  "minigrid==2.3.1",
  "numpy",
  "openai>=1.40.0",
  "pandas",
  "pyyaml",
  "seaborn",
  "stable-baselines3==2.3.2",
  "torch>=2.4",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires CUDA",
    "api: hits the Anthropic API (costs money)",
]
